# MezCALito

./: .clang-format-include  .gitignore  README.md  arm-none-eabi.ini  conf.py  linker.ld  main.c  makefile  meson.build  project.yml  startup.c
autosar/libraries/: Bfx.h  Bfx_16bits.h  Bfx_32bits.h  Bfx_64bits.h  Bfx_8bits.h  Bfx_bit8.h
autosar/mcal/: Platform_Types.h  Port.c  Port.h  Registers.h
docs/: index.rst  requirements.rst
docs/requirements/: general-requirements-on-basic-software-modules.rst  general-requirements-on-spal.rst  main-requirements.rst  project-objectives.rst  requirements-on-libraries.rst  requirements-on-port-driver.rst  specification-of-bit-handling-routines.rst  specification-of-platform-types.rst  specification-of-standard-types.rst  specification-on-port-driver.rst
generator/: Port_Cfg.c  Port_Cfg.h  port.py  port.yml  test.py  test_port.py
utest/: Test_Bfx_16bits.c  Test_Bfx_32bits.c  Test_Bfx_8bits.c
